# guru_grpc_server_tests

./: .gitignore  README.md  docker-compose.mock.yml  pyproject.toml
internal/grpc/interceptors/: allure.py  logging.py
settings/: settings.py
tests/: conftest.py  test_calculate_rate.py  test_get_all_currencies.py
wiremock/grpc/mappings/: calculateRate.json  getAllCurrencies.json
