[project]
name = "guru-grpc-server-tests"
version = "0.1.0"
description = "gRPC tests for Niffler currency service"
authors = [
    {name = "Alina", email = "alina@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pbreflect>=1.1.1,<2.0.0",
    "pytest>=9.0.2,<10.0.0",
    "allure-pytest>=2.15.3,<3.0.0",
    "pydantic-settings>=2.13.1,<3.0.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--alluredir=./allure-results"
